# PSR-SRS-Enterprise

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d69fffd1e6b_0002_add_client_event_id.py  cfe827193ef4_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  error_handlers.py  middleware.py  pagination.py  router.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  service_config.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/db/seed/: types.py  (+5 more)
backend/app/evaluation/: __init__.py  metrics.py  protocols.py
backend/app/models/: __init__.py  event.py  import_run.py  item.py  mixins.py  qrel.py  query.py  user.py
backend/app/personalization/: __init__.py  evaluation.py  profiles.py  reranker.py  types.py
backend/app/repositories/: __init__.py  algorithm_inputs.py  event_repository.py  import_run_repository.py  item_repository.py  qrel_repository.py  query_repository.py  user_repository.py
backend/app/retrieval/: __init__.py  bm25.py  fusion.py  semantic.py  tokenization.py  types.py  vectorization.py
backend/app/schemas/: __init__.py  common.py  evaluation.py  event.py  item.py  search.py  system.py  user.py
backend/app/services/: container.py  errors.py  evaluation_service.py  event_service.py  index_manager.py  lifecycle.py  personalization_service.py  profile_service.py  search_service.py  types.py
backend/tests/: conftest.py  path_helpers.py  test_config.py  test_db.py  test_health.py
backend/tests/api/: test_cors.py  test_error_handlers.py  test_evaluation_api.py  test_health_api.py  test_items_api.py  test_openapi.py  test_request_id.py  test_search_api.py  test_system_api.py  test_users_api.py
backend/tests/db/: test_database_url.py  test_foreign_keys.py  test_session.py
(+114 files in other folders)
