[project]
name = "psr-srs-enterprise-backend"
version = "0.1.0"
description = "PSR-SRS Enterprise — Personalized Search Ranking & Semantic Retrieval (backend)"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "search-ranking",
    "semantic-retrieval",
    "personalization",
    "bm25",
    "lsa",
    "information-retrieval",
    "fastapi",
    "enterprise",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<7.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

ml = [
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "scikit-learn>=1.4,<2.0",
]

[project.urls]
Repository = "https://github.com/yaoaoaoo/PSR-SRS-Enterprise"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "parity: slow parity verification tests that run MVP via subprocess",
    "integration: integration tests that require the full sample dataset",
]
